Synergism.css
/* ... */
.permshopbutton:hover {
    background-color: #333;
}

#ants {
    position: relative;
    padding: 0;
    text-align: center;
}

#antsWrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-shrink: 0;
}

#antsWelcomeTexts { margin-top: 30px; }
#antsWelcomeTexts > p { margin: 2px; }
#antwelcome { font-size: 1.3em; }

#antrow1 { margin-top: 12px; }

#antrow2 {
    margin-top: 7px;
    height: 115px;
}

#antrow3 {
    margin-top: 30px;
    height: 115px;
}
#antrow4 { margin-top: 10px; }

#antrow2 > p { margin: 0; }
#crumbcount { font-size: 1.2em; }

#antrow3 > p { margin: 5px; }

#antToggleFeatures {
    display: flex;
    justify-content: center;
    margin: 5px 0;
}

#antSacrificeButtons {
    display: flex;
    flex-direction: column;
}

.antSacrificeButtonsContainer {
    display: flex;
    justify-content: center;
}

#toggleAntMax {
    height: 35px;
    width: 100px;
    margin-right: 10px;
    border: 1px solid gold;
    transition-duration: 0.15s;
}

#toggleAntMax:hover {
    background-color: #333;
}

#toggleAutoSacrificeAnt {
    height: 35px;
    width: 150px;
    margin-right: 10px;
    border: 1px solid crimson;
    transition-duration: 0.15s;
}

#toggleAutoSacrificeAnt:hover {
    background-color: #333;
}

#autoSacrificeAntMode {
    height: 20px;
    width: 150px;
    border: 1px solid green;
    transition-duration: 0.15s;
}

#autoSacrificeAntMode:hover {
    background-color: #333;
}

#autoAntSacrificeAmount {
    width: 150px;
}

#autoAntSacrifice {
    text-align: center;
    width: 100%;
}

#antSacrificeTimer {
    position: absolute;
    padding: 0;
    width: 300px;
    margin-left: -118px;
    top: 30px;
    text-align: center;
    left: 70%;
}

#antSacrifice {
    position: absolute;
    padding: 0;
    top: 70px;
    text-align: center;
    left: 70%;
}

.antSacrificeSettingsContainer {
    display: flex;
    flex-direction: column;
}

#antSacrificeSummary {
    position: absolute;
    padding: 0;
    width: 300px;
    top: 30px;
    text-align: center;
    left: 77%;
}

#antELO {
    position: absolute;
}

#antUpgradeMultiplier {
    position: absolute;
    top: 20px;
}

#antTimeMultiplier {
    position: absolute;
    top: 40px;
}

#antSacrificeTitle {
    position: absolute;
    top: 60px;
}

#antSacrificeMultiplier {
    position: absolute;
    top: 80px;
}

#antSacrificeTable {
    position: absolute;
    top: 122px;
    left: 100px;
    padding: 0;
    border-spacing: 0;
}

.antBtn {
    background-color: #171717;
}

.antTierBtnAvailable {
    cursor: pointer;
    background-color: white;
}

.antUpgradeBtnAvailable {
    cursor: pointer;
    background-color: silver;
}

#cubes {
    position: relative;
    padding: 0;
}

/* Wow! Cube sidebar */
#wowCubeSidebar {
    display: flex;
    flex-direction: column;
    margin-right: 2%;
    text-align: center;
}

#wowCubeSidebarButtons {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 20px;
}

.cubeSwitchTabBtn {
    width: 250px;
    height: 30px;
    margin: 3px;
    transition-duration: 0.15s;
}

.cubeSwitchTabBtn:hover {
    background-color: #333;
}

#wowCubeSidebar > p { margin: 0; }
#cubeToQuarkTimer { font-size: 1.2em; }

.cubePlacement1 {
    font-size: 1.2em;
}

.cubePlacement2,
.cubePlacement3 {
    font-size: 1em;
}

.cubePlacement4 {
    position: absolute;
    text-align: center;
    top: 100px;
    left: 30%;
    margin-left: -32px;
}

.cubePlacement5 {
    position: absolute;
    text-align: center;
    top: 84px;
    left: 40%;
    margin-left: -96px;
}

.cubeBtn {
    width: 100px;
    height: 30px;
    color: white;
    background-color: black;
    border: 1px solid gold;
    transition-duration: 0.15s;
}

.cubeBtn:hover {
    background-color: #333;
}

p[id$="BlessingsTotal"] {
    padding: 15px;
}

#cubeBlessingsTotal { color: orange; }
#tesseractBlessingsTotal { color: orchid; }
#hypercubeBlessingsTotal { color: rgb(255, 0, 76); }
#platonicBlessingsTotal { color: orange; }

#cubesWrapper {
    display: flex;
    justify-content: center;
    margin-top: 40px;
    margin-left: -185px;
}

.openGrid {
    display: flex;
    align-self: flex-start;
}

.openImage {
    height: 64px;
    width: 64px;
}

.inventory {
    white-space: nowrap;
    margin: 6px 10px;
}

.openBtn {
    grid-row: 2;
    grid-column: 2;
    margin-left: 10px;
}

.openButtons {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.cubeBonus {
    margin-left: -2px;
    margin-top: 5px;
    width: 100%;
}

.cubeIcon {
    border-spacing: 0;
}

.cubeTab {
    flex-direction: column;
    align-items: center;
    width: 700px;
}

#cubeTab5Wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 700px;
    margin-top: 15px;
}

#cubeTab5Wrapper > p { margin: 2px; }

#cubeTab6 {
    flex-direction: row;
    align-items: flex-start;
}

#cube1Bonus {
    width: 1500px;
}

#tesseract1Bonus {
    width: 1500px;
}

#hypercube1Bonus {
    width: 1500px;
}

#cubeAmount2 { color: white; }

#cubeUpgradeTable {
    border-collapse: collapse;
    font-size: 0;
}

#toggleCubeBuy {
    width: 200px;
    height: 30px;
}

.gridImg {
    cursor: pointer;
}

#switchsettingtab {
    position: absolute;
    height: 30px;
    width: 200px;
    left: 50%;
    margin-left: -100px;
    top: 10px;
    border: 2px solid gold;
}

#switchsettingtab2 {
    position: absolute;
    height: 30px;
    width: 200px;
    left: 50%;
    margin-left: -100px;
    top: 40px;
    border: 2px solid orange;
}

/* Credits */

#creditssubtab {
    margin-top: 4.5%;
    margin-left: 14%;
    margin-right: 14%;
}

#creditssubtab > * {
    font-size: 1.2em;
    text-align: center;
    margin: 0.4em 0;
}

#versionnumber {
    color: fuchsia;
}

#ascension {
    position: relative;
    padding: 0;
    color: orange;
    flex-direction: column;
    align-items: center;
}

#tesseractTexts { margin-top: 20px; }
/* ... */

